<resources>
    <string name="app_name">木犀工作台</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">项目</string>
    <string name="title_notifications">通知</string>
    <string name="progress">进度</string>
    <string name="Mine">我的</string>
    <string name="app_name_chinese">木犀工作台</string>
    <string name="bt_login">登录</string>
    <string name="hint_account">邮箱</string>
    <string name="hint_password">密码</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loadmore">点击加载更多</string>
    <string name="notification">通 知</string>
    <string name="allread">全部已读</string>
    <string name="get_it">已读</string>
    <string name="def_project_name">默认项目</string>
    <string name="project">项目</string>
    <string name="register">注册</string>
    <string name="register_dialog">请到 PC 端工作台注册</string>
    <string name="i_konw">我知道了</string>

    <array name="progress_titlebar_screening">
        <item>全部</item>
        <item>产品组</item>
        <item>设计组</item>
        <item>前端组</item>
        <item>安卓组</item>
        <item>后端组</item>
    </array>
</resources>
