<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_navigation"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/progress_navigation"
        android:title="@string/progress"/>

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/project_navigation"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_navigation"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/mine_navigation"
        android:title="@string/Mine"/>
</menu>
